kubernetes-templates/gics-app-image-with-deployments/deployment-gics-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gics-app
  namespace: gics
  labels:
    app: gics-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gics-app
  template:
    metadata:
      labels:
        app: gics-app
    spec:
      securityContext:
        runAsNonRoot: true
#      imagePullSecrets:
#        - name: <Name of secret for repository>
      containers:
      - name: gics-app
        image: <Name of image with deloyments>
        imagePullPolicy: IfNotPresent
        securityContext:
          runAsUser: 1111
          allowPrivilegeEscalation: false
        ports:
        - containerPort: 8080
          protocol: TCP
        - containerPort: 8443
          protocol: TCP
        resources:
          limits:
            cpu: 500m
            memory: 2G
          requests:
            cpu: 100m
            memory: 1G
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 120
          periodSeconds: 60
          successThreshold: 1
          timeoutSeconds: 1
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 120
          periodSeconds: 60
          successThreshold: 1
          timeoutSeconds: 1
